# StrumAI

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/app/: config.py  database.py  main.py  models.py
backend/app/routes/: skus.py
backend/app/services/: demand.py
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: core-requirements.spec.ts  extra-features.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AggregatedDemandChart.tsx  AlertCards.tsx  DemandDriversPanel.tsx  ErrorBoundary.tsx  InfoTooltip.tsx  KPISummary.tsx  RecentlyViewedSKUs.tsx  SKUHealthCard.tsx  SKUSearch.tsx
frontend/src/lib/: recentSKUs.ts
frontend/src/pages/: HomePage.tsx  NotFoundPage.tsx  SKUDetailPage.tsx
frontend/src/test/: api-client.test.ts  app.test.tsx  components.test.tsx  recentSKUs.test.ts
scripts/: load_data.py
tests/: conftest.py  test_api.py  test_data_loader.py
